ecmascript/parser/tests/test262-error-references/fail/ca3dd7ea0b4626dd.js.stderr
error: Expected Comma, got Some(Arrow)
 --> $DIR/tests/test262-parser/fail/ca3dd7ea0b4626dd.js:1:23
  |
1 | console.log(typeof () => {});
  |                       ^^

error: Unexpected token Some(Arrow)
 --> $DIR/tests/test262-parser/fail/ca3dd7ea0b4626dd.js:1:23
  |
1 | console.log(typeof () => {});
  |                       ^^

